--- a/flipClock/src/renderer/index.html
+++ b/flipClock/src/renderer/index.html
@@ -12,6 +12,9 @@
 
   <body>
     <div id="app"></div>
+    <div class="">
+      <audio src="/src/timeout.wav" id="timeout"></audio>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
