加入定时音频

--- a/flipClock/src/renderer/index.html
+++ b/flipClock/src/renderer/index.html
@@ -4,16 +4,13 @@
     <meta charset="UTF-8" />
     <title>Electron</title>
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
-    <meta
-      http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'"
-    />
+    <meta http-equiv="Content-Security-Policy" content="media-src 'self' http://43.138.152.177:7003">
   </head>
 
   <body>
     <div id="app"></div>
     <div class="">
-      <audio src="/src/timeout.wav" id="timeout"></audio>
+      <audio src="http://43.138.152.177:7003/static/timeout.wav" id="timeout"></audio>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
